@@ -3,8 +3,6 @@ type Query {
   get_author(slug: String, author_id: Int): Author
   get_author_id(user: String!): Author
   get_authors_all: [Author]
-  get_author_followers(slug: String, user: String, author_id: Int): [Author]
-  get_author_follows(slug: String, user: String, author_id: Int): AuthorFollows!
   load_authors_by(by: AuthorsBy!, limit: Int, offset: Int): [Author]
 
   # community
@@ -15,8 +13,10 @@ type Query {
   get_shouts_drafts: [Shout]
 
   # follower
-  get_my_followed: CommonResult! # { authors topics communities }
   get_shout_followers(slug: String, shout_id: Int): [Author]
+  get_topic_followers(slug: String, topic_id: Int): [Author]
+  get_author_followers(slug: String, user: String, author_id: Int): [Author]
+  get_author_follows(slug: String, user: String, author_id: Int): AuthorFollows!
 
   # reaction
   load_reactions_by(by: ReactionBy!, limit: Int, offset: Int): [Reaction]
